<?xml version="1.0"?>
<!--
/*********************************************************************
* Copyright (c) 2024 Contributors to the Eclipse Foundation.
*
* This program and the accompanying materials are made
* available under the terms of the Eclipse Public License 2.0
* which is available at https://www.eclipse.org/legal/epl-2.0/
*
* SPDX-License-Identifier: EPL-2.0
**********************************************************************/
-->
<project
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.eclipse.daanse</groupId>
    <artifactId>org.eclipse.daanse.pom.parent</artifactId>
    <version>0.0.7</version>
  </parent>
  <artifactId>org.eclipse.daanse.olap</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>
  <name>Eclipse Daanse OLAP Processing Engine</name>
  <description>Comprehensive OLAP (Online Analytical Processing) engine
    providing multidimensional data processing, cube operations, advanced query
    execution, intelligent caching, and aggregation management. Includes
    complete API framework for hierarchical navigation, measure calculations,
    access control, and XMLA protocol integration for enterprise analytical
    applications.</description>

  <properties>
    <revision>0.0.1-SNAPSHOT</revision>
    <slf4j.version>2.0.9</slf4j.version>
    <caffeine.version>3.1.2</caffeine.version>
    <java.version>25</java.version>
  </properties>

  <repositories>
    <repository>
      <id>ossrh</id>
      <name>Sonatype Nexus Snapshots</name>
      <url>https://central.sonatype.com/repository/maven-snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>


  <modules>
    <module>api</module>
    <module>common</module>
    <module>xmla</module>
    <module>spi</module>
    <module>format</module>
    <module>odc</module>
    <module>check</module>
    <module>util.format</module>
  </modules>

  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>

</project>
